добавил студию в цюрихе

--- a/studios/index.html
+++ b/studios/index.html
@@ -55,7 +55,7 @@
           Bourg studio
         </h4>
         <p class="studios__address">
-          Rue de bourg 11  galerie de Bourg 1103 Lausanne
+          Rue de bourg 11 galerie de Bourg 1103 Lausanne
         </p>
         <p class="studios__phone">
           +41 21 320 1041
@@ -68,13 +68,13 @@
         <h4 class="studios__title studios__title--is-white">
           Coming soon...
         </h4>
-        <p class="studios__address studios__address--is-white">
+        <!--<p class="studios__address studios__address--is-white">
           If you are not already on our mailing joint to get the updates
         </p>
         <form method="POST" action="subscribe.php" class="studios__form">
           <input type="email" class="studios__input-email" placeholder="Email" required="required" pattern="([\w-\.]+)@((?:[\w]+\.)+)([a-zA-Z]{2,4})">
           <input type="submit" class="studios__input-submit" value="subscribe">
-        </form>
+        </form>-->
       </div>
     </div>
     <div class="caption">
@@ -87,11 +87,14 @@
           zurich studio
         </h4>
         <p class="studios__address">
-          Rue de bourg 11 galerie de Bourg 1103 Lausanne
+          Villa Egli Höschgasse 4 8008 Zurich
         </p>
         <p class="studios__phone">
           +41 21 320 1041
         </p>
+        <a href="zurich/" class="studios__button">
+           FIND OUT MORE
+        </a>
       </div>
     </div>
   </main>
