--- a/studios/zurich/index.html
+++ b/studios/zurich/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | Studios | Bourg</title>
+  <title>MIX Studio | Studios | Zurich</title>
   <link rel="stylesheet" href="../../_assets/css/style.css">
 </head>
 <body>
@@ -41,7 +41,7 @@
         <article class="article">
           <div class="article__wrapper">
             <div class="caption">
-              <h1 class="caption__title caption__title--is-left">Bourg studio</h1>
+              <h1 class="caption__title caption__title--is-left">Zurich studio</h1>
               <div class="caption__divider"></div>
             </div>
             <p class="article__text">
@@ -49,19 +49,8 @@
             </p>
             <ul class="icons">
               <li class="icons__item">
-                <p class="icons__text icons__text--is-towel">
-                  Towels-Product «Stop&nbsp;the&nbsp;water»
-                </p>
                 <p class="icons__text icons__text--is-change">
                   Changing room
-                </p>
-              </li>
-              <li class="icons__item">
-                <p class="icons__text icons__text--is-shop">
-                  Shop
-                </p>
-                <p class="icons__text icons__text--is-spa">
-                  Spa-Shirin B
                 </p>
               </li>
             </ul>
@@ -74,16 +63,9 @@
             <h3 class="article__subhead">Classes</h3>
             <ul class="shedule">
               <li class="shedule__item">
-                <p class="shedule__caption">Available</p>
                 <p class="shedule__text">Barre</p>
-                <p class="shedule__text">Try</p>
-                <p class="shedule__text">Yoga</p>
               </li>
-              <li class="shedule__item">
-                <p class="shedule__caption">One to one</p>
-                <p class="shedule__text">Private try</p>
-                <p class="shedule__text">Private Yoga</p>
-              </li>
+
             </ul>
             
             <h3 class="article__subhead">Contacts</h3>
@@ -94,13 +76,13 @@
               </li>
               <li class="shedule__item">
                 <p class="shedule__caption">Studio manager</p>
-                <p class="shedule__text">Shirin Beram</p>
+                <p class="shedule__text">Alessandra Bessler</p>
               </li>
             </ul>
             <ul class="shedule">
               <li class="shedule__item">
                 <p class="shedule__caption">Adress</p>
-                <p class="shedule__text">Rue de bourg 11<br>galerie de Bourg 1103 Lausanne</p>
+                <p class="shedule__text">Villa Egli<br>Höschgasse 4<br>8008 Zurich</p>
                 <p class="shedule__text"></p>
               </li>
               <li class="shedule__item">
@@ -160,7 +142,7 @@
   </footer>
   
   
-  <script src="../../_assets/js/map_lausanne.js"></script>
+  <script src="../../_assets/js/map_zurich.js"></script>
   <script async defer
     src="https://maps.googleapis.com/maps/api/js?key=AIzaSyAVVH_sNL6bjByqSGCJogNH65U_CVDkSiI&callback=initMap">
   </script>
