--- a/details/terms/index.html
+++ b/details/terms/index.html
@@ -16,14 +16,10 @@
           <li class="menu__item"><a href="../../about/" class="menu__link">About Us</a></li>
           <li class="menu__item"><a href="../../studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="../../prices/" class="menu__link">Prices</a></li>
-          <li class="menu__item"><a href="../../team/"class="menu__link">Team</a></li>
-          <li class="menu__item">
-            <div class="menu__switch"> 
-              <span class="menu__language">En</span>
-              <a href="#" class="menu__language menu__language--is-hidden">Fr</a>
-            </div>
-          </li>
-          <li class="menu__item menu__item--has-no-hover"><a href="#" class="menu__button">Login</a></li>
+          <li class="menu__item"><a href="../../team/" class="menu__link">Team</a></li>
+          <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
+          <li class="menu__item"><a href="../../../fr/" class="menu__link">Fr</a></li>
+          <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -299,7 +295,7 @@
         <li class="footer-menu__item"><a href="../../team/" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">Programs</h4></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">CLASSES</h4></li>
         <li class="footer-menu__item"><a href="../../programs/barre/" class="footer-menu__link">Barre</a></li>
         <li class="footer-menu__item"><a href="../../programs/fuse/" class="footer-menu__link">Fuse</a></li>
         <li class="footer-menu__item"><a href="../../programs/trx/" class="footer-menu__link">TRX</a></li>
@@ -308,7 +304,6 @@
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="../contact/" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="../careers/" class="footer-menu__link">Careers</a></li>
         <li class="footer-menu__item"><a href="../terms/" class="footer-menu__link">Terms and Conditions</a></li>
         <li class="footer-menu__item"><a href="../privacy" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
@@ -322,7 +317,7 @@
       <div class="footer__divider"></div>
       <div class="footer__logo-holder">
         <div class="footer__logo"></div>
-        <p class="footer__copy">&copy; 2017 MIX</p>
+        <p class="footer__copy">&copy; 2017 MIX Studio &ndash; MIX Fitness Sarl</p>
       </div>
     </div>
   </footer>
