--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
           <li class="menu__item"><a href="studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="team/" class="menu__link">Team</a></li>
-          <li class="menu__item"><a href="blog/" class="menu__link">blog &ndash; Fuel</a></li>
+          <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
           <li class="menu__item"><a href="fr/" class="menu__link">Fr</a></li>
           <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
@@ -141,7 +141,7 @@
         <li class="footer-menu__item"><a href="team/" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">PROGRAMS</h4></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">CLASSES</h4></li>
         <li class="footer-menu__item"><a href="programs/barre/" class="footer-menu__link">Barre</a></li>
         <li class="footer-menu__item"><a href="programs/fuse/" class="footer-menu__link">Fuse</a></li>
         <li class="footer-menu__item"><a href="programs/trx/" class="footer-menu__link">TRX</a></li>
@@ -150,9 +150,8 @@
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="details/contact/" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="details/careers/" class="footer-menu__link">Careers</a></li>
         <li class="footer-menu__item"><a href="details/terms/" class="footer-menu__link">Terms and Conditions</a></li>
-        <li class="footer-menu__item"><a href="details/privacy" class="footer-menu__link">Privacy Policy</a></li>
+        <li class="footer-menu__item"><a href="details/privacy/" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
