проверка полей и попап

--- a/details/contact/index.html
+++ b/details/contact/index.html
@@ -68,11 +68,11 @@
             A quick message is usually all we need to fix most issues.
           </p>
           <form class="article__form">
-            <input type="text" class="article__input" placeholder="Name">
-            <input type="email" class="article__input" placeholder="Email">
-            <input type="text" class="article__input" placeholder="Subject">
-            <textarea rows="10" class="article__input article__input--is-textarea" placeholder="Quick message"></textarea>
-            <input type="button" class="article__submit" value="Send">
+            <input type="text" class="article__input js-name" placeholder="Name">
+            <input type="email" class="article__input js-email" placeholder="Email">
+            <input type="text" class="article__input js-subject" placeholder="Subject">
+            <textarea rows="10" class="article__input article__input--is-textarea js-text" placeholder="Quick message"></textarea>
+            <input type="button" class="article__submit js-button" value="Send">
             <input type="reset" class="article__reset" value="Cancel">
           </form>
         </article>
@@ -117,5 +117,7 @@
       </div>
     </div>
   </footer>
+  
+  <script src="../../_assets/js/contact.js"></script>
 </body>
 </html>
