--- a/classes/yoga/index.html
+++ b/classes/yoga/index.html
@@ -40,65 +40,39 @@
         <article class="article">
           <div class="article__wrapper">
             <div class="caption">
-              <h1 class="caption__title caption__title--is-left">YOGA</h1>
+              <h2 class="caption__title caption__title--is-left">YOGA flow</h2>
               <div class="caption__divider"></div>
             </div>
             <p class="article__lead">
-              This class fuses traditional vinyasa yoga methodology with contemporary dynamic flow. Yoga asanas raise the body's heat and a strong emphasis on linking breath to movement creates a steady and consistent flow from pose to pose.
-            </p>
-            <p class="article__lead">
-              This powerful fluid exercise format works inner and outer alignment, strength and flexibility moving energy to produce a state of inner calm and balance.  All this set to great music, including rock, reggae, hip hop, blues and world beats.
+              This class fuses traditional vinyasa yoga methodology with contemporary dynamic flow. Yoga asanas raise the body's heat and a strong emphasis on linking breath to movement creates a steady and consistent flow from pose to pose.  This powerful fluid exercise format works inner and outer alignment, strength and flexibility moving energy to produce a state of inner calm and balance.  All this set to great music, including rock, reggae, hip hop, blues and world beats.
             </p>
             <h3 class="article__subhead">
-              flow base
+              yoga flow base
             </h3>
             <p class="article__text">
               Our yoga flow base offers you a chance to explore a creative slower paced flow format versus our open yoga flow. Focusing more on flexibility and relaxation, you will find yourself spending more time in postures and transitions while using your breath as your guide. This class is accessible to beginner students but, also fantastic for intermediate or advanced levels looking to deepen their practice.
             </p>
             <h3 class="article__subhead">
-              flow open
+              yoga flow open
             </h3>
             <p class="article__text">
-              Open to beginners and all levels. This class fuses traditional vinyasa yoga methodology with contemporary dynamic flow. Yoga asanas raise the body's heat and a strong emphasis on linking breath to movement creates a steady and consistent flow from pose to pose. This powerful fluid exercise format works inner and outer alignment, strength and flexibility moving energy to produce a state of inner calm and balance. All this set to great music, including rock, reggae, hip hop, blues and world beats. Modifications are offered for beginners and advanced options are given for those who are looking to challenge themselves during their workout. Class taught in English.
+              Open to beginners and all levels. This class fuses traditional vinyasa yoga methodology with contemporary dynamic flow. Yoga asanas raise the body's heat and a strong emphasis on linking breath to movement creates a steady and consistent flow from pose to pose. This powerful fluid exercise format works inner and outer alignment, strength and flexibility moving energy to produce a state of inner calm and balance. All this set to great music, including rock, reggae, hip hop, blues and world beats. Modifications are offered for beginners and advanced options are given for those who are looking to challenge themselves during their workout.
             </p>
-            <h3 class="article__subhead">Upcoming classes</h3>
-            <ul class="shedule">
-              <li class="shedule__item">
-                <p class="shedule__date">Sun 07:00AM</p>
-                <p class="shedule__type">Base</p>
-                <p class="shedule__trainer">Nora</p>
-              </li>
-              <li class="shedule__item">
-                <p class="shedule__date">Mon 12:00AM</p>
-                <p class="shedule__type">Open</p>
-                <p class="shedule__trainer">Sheila</p>
-              </li>
-              <li class="shedule__item">
-                <p class="shedule__date">Mon 07:00AM</p>
-                <p class="shedule__type">Base</p>
-                <p class="shedule__trainer">Nora</p>
-              </li>
-              <li class="shedule__item">
-                <p class="shedule__date">Sat 12:00AM</p>
-                <p class="shedule__type">Open</p>
-                <p class="shedule__trainer">Sheila</p>
-              </li>
-            </ul>
-            <h3 class="article__subhead">trainers</h3>
-            <ul class="trainers">
-              <li class="trainers__item">
-                <p class="trainers__name">Sheila</p>
-                <a href="../../team/sheila" class="trainers__link">
-                  <img src="../../_assets/img/_yoga/sheila.jpg" alt="Sheila" class="trainers__photo">
-                </a>
-              </li>
-              <li class="trainers__item">
-                <p class="trainers__name">Nora</p>
-                <a href="../../team/nora" class="trainers__link">
-                  <img src="../../_assets/img/_yoga/nora.jpg" alt="Nora" class="trainers__photo">
-                </a>
-              </li>
-            </ul>
+            <div class="caption caption--into">
+              <h2 class="caption__title caption__title--is-left">Yin yoga</h2>
+              <div class="caption__divider"></div>
+            </div>
+            <p class="article__lead">
+              Yin practice is an opportunity to let go of the outward appearance of how your yoga pose looks like and instead turn your attention inwards. Yin Yoga targets the connective tissues, such as the ligaments, muscles and even the joints of the body. Yin classes are designed to open your body and mind by holding poses for an extended period of time, typically 3-5 minutes with the aid of props. This class will increase your mobility, you will feel more open and will get to know your body and yourself a little better.
+            </p>
+            <div class="caption caption--into">
+              <h2 class="caption__title caption__title--is-left">flying high yoga</h2>
+              <div class="caption__divider"></div>
+            </div>
+            <p class="article__lead">
+              Flying High yoga is a versatile practice that compliments any existing yoga asana practice. The practice is done using a suspended belt from the ceiling is unique because there is a significant amount of creativity as well as many exclusive benefits involved. It can be a very dynamic or a very restorative yoga practice, which can be practiced alone or with a partner and can be done by anyone whether they are beginners or a more advanced yoga practitioner
+            </p>
+            <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="article__button">SIGN UP</a>
           </div>
         </article>
       </div>
