--- a/index.html
+++ b/index.html
@@ -74,28 +74,29 @@
     </div>
     <ul class="programs">
       <li class="programs__item">
-        <a href="programs/barre/index.html" class="programs__link programs__link--is-barre">
+        <a href="classes/barre/" class="programs__link programs__link--is-barre">
           <h4 class="programs__caption">Barre</h4>
           <p class="programs__text">An amazing workout combining the best elements of ballet barre with pilates and flexibility training</p>
         </a>
       </li>
+
       <li class="programs__item">
-        <a href="programs/fuse/index.html" class="programs__link programs__link--is-fuse">
-          <h4 class="programs__caption">Fuse</h4>
-          <p class="programs__text">The exercise bike can help you burn tons of calories and tone your legs</p>
-        </a>
-      </li>
-      <li class="programs__item">
-        <a href="programs/trx/index.html" class="programs__link programs__link--is-trx">
+        <a href="classes/trx/" class="programs__link programs__link--is-trx">
           <h4 class="programs__caption">Trx</h4>
           <p class="programs__text">A fit, healthy body is the best fashion statement  We are here to guide you with this simple workout</p>
         </a>
       </li>
       <li class="programs__item">
-        <a href="programs/yoga/" class="programs__link programs__link--is-yoga">
+        <a href="classes/yoga/" class="programs__link programs__link--is-yoga">
           <h4 class="programs__caption">Yoga</h4>
           <p class="programs__text">Yoga is a group of physical, mental, and spiritual practices or disciplines </p>
         </a>
+      </li>
+      <li class="programs__item">
+        <div class="programs__link programs__link--is-fuse programs__link--is-passive">
+          <h4 class="programs__caption">Fuse</h4>
+          <p class="programs__text">COMING SOON</p>
+        </div>
       </li>
     </ul>
   </section>
@@ -142,10 +143,9 @@
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">CLASSES</h4></li>
-        <li class="footer-menu__item"><a href="programs/barre/" class="footer-menu__link">Barre</a></li>
-        <li class="footer-menu__item"><a href="programs/fuse/" class="footer-menu__link">Fuse</a></li>
-        <li class="footer-menu__item"><a href="programs/trx/" class="footer-menu__link">TRX</a></li>
-        <li class="footer-menu__item"><a href="programs/yoga/" class="footer-menu__link">Yoga</a></li>
+        <li class="footer-menu__item"><a href="classes/barre/" class="footer-menu__link">Barre</a></li>
+        <li class="footer-menu__item"><a href="classes/trx/" class="footer-menu__link">TRX</a></li>
+        <li class="footer-menu__item"><a href="classes/yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
