--- a/team/garcia/index.html
+++ b/team/garcia/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
-  <title>MIX Studio | TEAM | ANGELINA</title>
+  <title>MIX Studio | TEAM | Raquel Garcia</title>
   <link rel="stylesheet" href="../../_assets/css/style.css">
 </head>
 <body>
@@ -16,14 +16,10 @@
           <li class="menu__item"><a href="../../about/" class="menu__link">About Us</a></li>
           <li class="menu__item"><a href="../../studios/" class="menu__link">Studios</a></li>
           <li class="menu__item"><a href="../../prices/" class="menu__link">Prices</a></li>
-          <li class="menu__item"><a href="../../team/" class="menu__link menu__link--is-current">Team</a></li>
-          <li class="menu__item">
-            <div class="menu__switch"> 
-              <span class="menu__language">En</span>
-              <a href="#" class="menu__language menu__language--is-hidden">Fr</a>
-            </div>
-          </li>
-          <li class="menu__item menu__item--has-no-hover"><a href="#" class="menu__button">Login</a></li>
+          <li class="menu__item"><a href="../../team/" class="menu__link">Team</a></li>
+          <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
+          <li class="menu__item"><a href="../../FR/" class="menu__link">Fr</a></li>
+          <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
       </div>
     </nav>
@@ -34,19 +30,22 @@
   <!--<main class="c-article c-article--is-yoga">-->
   <main class="l-container">
     <div class="l-container__row">
-      <div class="l-container__column l-container__column--is-left l-container__column--is-team-angelina">
+      <div class="l-container__column l-container__column--is-left l-container__column--is-team l-container__column--is-team-garcia">
       </div>
       <div class="l-container__column l-container__column--is-right">
         <article class="article">
           <div class="article__wrapper">
             <div class="caption">
-              <h1 class="caption__title caption__title--is-left">Angelina</h1>
+              <h1 class="caption__title caption__title--is-left">Raquel Garcia</h1>
               <div class="caption__divider"></div>
             </div>
             <p class="article__lead">
-              Angelina's ethos is simple, show up and leave nothing in the tank. Watch your body transform through powerful workouts fuelled by awesome music and energy. There is nowhere to hide in her sessions, her energy is crazy and she'll keep you fighting for it until the very end. 
+              Raquel has been practicing Yoga for 10 years and her journey has helped her realize the power and influence that yoga has on individual lives.
             </p>
-            <div class="footer-menu__item footer-menu__item--is-social footer-menu__item--is-black">
+            <p class="article__lead">
+              The practice has totally changed her life, has empowered her to be happier, trust in herself and follow her dreams to reality. This is what she wants to share in each class; that yoga is much more than exercise and breathing techniques.  Yoga is a philosophy which give us tools and experience to apply off the mat in our daily lives!  She makes it accessible and sprinkles it with her fairy dust for a magical and transformative experience. 
+            </p>
+            <!--<div class="footer-menu__item footer-menu__item--is-social footer-menu__item--is-black">
               <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
               <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
             </div>
@@ -71,7 +70,7 @@
               <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer4.jpg" alt=""></li>
               <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer5.jpg" alt=""></li>
               <li class="spotify__item"><img src="../../_assets/img/_team/_personal/angelina/Layer6.jpg" alt=""></li>
-            </ul>
+            </ul>-->
           </div>
         </article>
       </div>
@@ -83,38 +82,35 @@
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">EXPLORE MIX</h4></li>
-        <li class="footer-menu__item"><a href="../../about/" class="footer-menu__link">About Us</a></li>
+        <li class="footer-menu__item"><a href="../../about/" class="footer-menu__link">About us</a></li>
         <li class="footer-menu__item"><a href="../../studios/" class="footer-menu__link">Studios</a></li>
         <li class="footer-menu__item"><a href="../../prices/" class="footer-menu__link">Prices</a></li>
         <li class="footer-menu__item"><a href="../../team/" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">PROGRAMS</h4></li>
-        <li class="footer-menu__item"><a href="../barre/" class="footer-menu__link">Barre</a></li>
-        <li class="footer-menu__item"><a href="../fuse/" class="footer-menu__link">Fuse</a></li>
-        <li class="footer-menu__item"><a href="../trx/" class="footer-menu__link">TRX</a></li>
-        <li class="footer-menu__item"><a href="../yoga/" class="footer-menu__link">Yoga</a></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">CLASSES</h4></li>
+        <li class="footer-menu__item"><a href="../../classes/barre/" class="footer-menu__link">Barre</a></li>
+        <li class="footer-menu__item"><a href="../../classes/trx/" class="footer-menu__link">TRX</a></li>
+        <li class="footer-menu__item"><a href="../../classes/yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="../../details/contact/" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="../../details/careers/" class="footer-menu__link">Careers</a></li>
         <li class="footer-menu__item"><a href="../../details/terms/" class="footer-menu__link">Terms and Conditions</a></li>
-        <li class="footer-menu__item"><a href="../../details/privacy" class="footer-menu__link">Privacy Policy</a></li>
+        <li class="footer-menu__item"><a href="../../details/privacy/" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
         <li class="footer-menu__item footer-menu__item--is-social">
-          <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
-          <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
+          <a href="https://www.instagram.com/mixstudioch/" class="footer-menu__social footer-menu__social--is-instagram "></a>
+          <a href="https://www.facebook.com/MIX-studio-230644687417243/" class="footer-menu__social footer-menu__social--is-fb"></a>
         </li>
       </ul>
       <div class="footer__divider"></div>
       <div class="footer__logo-holder">
         <div class="footer__logo"></div>
-        <p class="footer__copy">&copy; 2017 MIX</p>
+        <p class="footer__copy">&copy; 2017 MIX Studio &ndash; MIX Fitness Sarl</p>
       </div>
-      
     </div>
   </footer>
   
