--- a/EN/studios/index.html
+++ b/EN/studios/index.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
   <title>MIX Studio | OUR STUDIOS</title>
-  <link rel="stylesheet" href="../../../_assets/css/style.css">
+  <link rel="stylesheet" href="../../_assets/css/style.css">
 </head>
 <body>
   <header class="c-header">
