--- a/EN/team/index.html
+++ b/EN/team/index.html
@@ -50,14 +50,14 @@
     
     <div class="team js-container">
       <div class="team__wrapper js-team">
-        <div class="team__item js-trainer"><a href="beram/" class="team__link"><p class="team__name">Shirin</p><img src="../_assets/img/_team/mix_team_beram.jpg" alt="Shirin Beram" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="bessler/" class="team__link"><p class="team__name">Alessandra</p><img src="../_assets/img/_team/mix_team_bessler.jpg" alt="Alessandra Bessler" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="chazot/" class="team__link"><p class="team__name">Celine</p><img src="../_assets/img/_team/mix_team_chazot.jpg" alt="Celine Chazot" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="garcia/" class="team__link"><p class="team__name">Raquel</p><img src="../_assets/img/_team/mix_team_garcia.jpg" alt="Raquel Garcia" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="laverde/" class="team__link"><p class="team__name">Daniela</p><img src="../_assets/img/_team/mix_team_laverde.jpg" alt="Daniela Laverde" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="lutz/" class="team__link"><p class="team__name">Sheila</p><img src="../_assets/img/_team/mix_team_lutz.jpg" alt="Sheila Lutz" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="pais/" class="team__link"><p class="team__name">João</p><img src="../_assets/img/_team/mix_team_pais.jpg" alt="João Pais" class="team__photo"></a></div>
-        <div class="team__item js-trainer"><a href="tetah/" class="team__link"><p class="team__name">Enora</p><img src="../_assets/img/_team/mix_team_tetah.jpg" alt="Enora Tetah" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="beram/" class="team__link"><p class="team__name">Shirin</p><img src="../../_assets/img/_team/mix_team_beram.jpg" alt="Shirin Beram" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="bessler/" class="team__link"><p class="team__name">Alessandra</p><img src="../../_assets/img/_team/mix_team_bessler.jpg" alt="Alessandra Bessler" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="chazot/" class="team__link"><p class="team__name">Celine</p><img src="../../_assets/img/_team/mix_team_chazot.jpg" alt="Celine Chazot" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="garcia/" class="team__link"><p class="team__name">Raquel</p><img src="../../_assets/img/_team/mix_team_garcia.jpg" alt="Raquel Garcia" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="laverde/" class="team__link"><p class="team__name">Daniela</p><img src="../../_assets/img/_team/mix_team_laverde.jpg" alt="Daniela Laverde" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="lutz/" class="team__link"><p class="team__name">Sheila</p><img src="../../_assets/img/_team/mix_team_lutz.jpg" alt="Sheila Lutz" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="pais/" class="team__link"><p class="team__name">João</p><img src="../../_assets/img/_team/mix_team_pais.jpg" alt="João Pais" class="team__photo"></a></div>
+        <div class="team__item js-trainer"><a href="tetah/" class="team__link"><p class="team__name">Enora</p><img src="../../_assets/img/_team/mix_team_tetah.jpg" alt="Enora Tetah" class="team__photo"></a></div>
       </div>
       <div class="team__controls">
         <div class="team__panel team__panel--is-left">
