--- a/EN/index.html
+++ b/EN/index.html
@@ -24,30 +24,31 @@
       </div>
     </nav>
     <div class="slider js-slider">
-      <section class="slider__slide slider__slide--is-first js-slide">
-        <div class="hero">
-          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
-        </div>
-      </section>
-      <section class="slider__slide slider__slide--is-second js-slide">
-        <div class="hero">
-          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
-        </div>
-      </section>
-      <section class="slider__slide slider__slide--is-third js-slide">
-        <div class="hero">
-          <h2 class="hero__caption">Your body&hellip; find your mix</h2>
-          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
-        </div>
-      </section>
       <section class="slider__slide slider__slide--is-fourth js-slide">
         <div class="hero">
           <h2 class="hero__caption">Your body&hellip; find your mix</h2>
           <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
         </div>
       </section>
+      <section class="slider__slide slider__slide--is-first js-slide">
+        <div class="hero">
+          <h2 class="hero__caption">TRX</h2>
+          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
+        </div>
+      </section>
+      <section class="slider__slide slider__slide--is-yoga js-slide">
+        <div class="hero">
+          <h2 class="hero__caption">Yoga</h2>
+          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
+        </div>
+      </section>
+      <section class="slider__slide slider__slide--is-third js-slide">
+        <div class="hero">
+          <h2 class="hero__caption">Fuse</h2>
+          <p class="hero__text">A fit, healthy body is the best fashion statement. We are here to guide you.</p>
+        </div>
+      </section>
+      
     </div>
     
     <div class="controls">
