--- a/EN/about/index.html
+++ b/EN/about/index.html
@@ -91,7 +91,7 @@
     </div>
   </main>
   
-  <footer class="c-footer">
+  <footer class="c-footer c-footer--is-white">
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">EXPLORE MIX</h4></li>
