--- a/EN/details/contact/index.html
+++ b/EN/details/contact/index.html
@@ -117,6 +117,6 @@
     </div>
   </footer>
   
-  <script src="../../_assets/js/contact.js"></script>
+  <script src="../../../_assets/js/contact.js"></script>
 </body>
 </html>
