--- a/EN/team/index.html
+++ b/EN/team/index.html
@@ -18,7 +18,7 @@
           <li class="menu__item"><a href="../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><p class="menu__link menu__link--is-current">Team</p></li>
           <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
-          <li class="menu__item"><a href="../FR/team/" class="menu__link">Fr</a></li>
+          <li class="menu__item"><a href="../fr/team/" class="menu__link">Fr</a></li>
           <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
       </div>
