--- a/EN/index.html
+++ b/EN/index.html
@@ -110,8 +110,8 @@
     <div class="gallery">
       <div class="gallery__row">
         <video controls poster="_assets/video/MIX_poster.jpg" class="gallery__video">
-          <source src="_assets/video/MIX_M6_high.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
-          <source src="_assets/video/MIX_M6_high.ogv" type='video/ogg; codecs="theora, vorbis"'>
+          <source src="../_assets/video/MIX_M6_high.mp4" type='video/mp4; codecs="avc1.42E01E, mp4a.40.2"'>
+          <source src="../_assets/video/MIX_M6_high.ogv" type='video/ogg; codecs="theora, vorbis"'>
           HTML5 video not supported
         </video>
       </div>
