--- a/EN/details/privacy/index.html
+++ b/EN/details/privacy/index.html
@@ -135,6 +135,6 @@
       </div>
     </div>
   </footer>
-  <script src="../../_assets/js/menu-vert.js"></script>
+  <script src="../../../_assets/js/menu-vert.js"></script>
 </body>
 </html>
