--- a/en/studios/bourg/index.html
+++ b/en/studios/bourg/index.html
@@ -18,7 +18,7 @@
           <li class="menu__item"><a href="../../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="../../team/" class="menu__link">Team</a></li>
           <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
-          <li class="menu__item"><a href="../../../fr/studios/bourg" class="menu__link">Fr</a></li>
+          <!--<li class="menu__item"><a href="../../../fr/studios/bourg" class="menu__link">Fr</a></li>-->
           <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
       </div>
@@ -62,9 +62,9 @@
               </li>
             </ul>
             <div class="images">
-              <img src="../../_assets/img/_studios/bourg/bourg_img-1.jpg" alt="bourg" class="images__item">
-              <img src="../../_assets/img/_studios/bourg/bourg_img-2.jpg" alt="bourg" class="images__item">
-              <img src="../../_assets/img/_studios/bourg/bourg_img-3.jpg" alt="bourg" class="images__item">
+              <img src="../../../_assets/img/_studios/bourg/bourg_img-1.jpg" alt="bourg" class="images__item">
+              <img src="../../../_assets/img/_studios/bourg/bourg_img-2.jpg" alt="bourg" class="images__item">
+              <img src="../../../_assets/img/_studios/bourg/bourg_img-3.jpg" alt="bourg" class="images__item">
             </div>
             
             <h3 class="article__subhead">Classes</h3>
@@ -120,38 +120,35 @@
     <div class="footer">
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">EXPLORE MIX</h4></li>
-        <li class="footer-menu__item"><a href="../../about/" class="footer-menu__link">About Us</a></li>
+        <li class="footer-menu__item"><a href="../../about/" class="footer-menu__link">About us</a></li>
         <li class="footer-menu__item"><a href="../../studios/" class="footer-menu__link">Studios</a></li>
         <li class="footer-menu__item"><a href="../../prices/" class="footer-menu__link">Prices</a></li>
         <li class="footer-menu__item"><a href="../../team/" class="footer-menu__link">Team</a></li>
       </ul>
       <ul class="footer-menu">
-        <li class="footer-menu__item"><h4 class="footer-menu__caption">PROGRAMS</h4></li>
-        <li class="footer-menu__item"><a href="../barre/" class="footer-menu__link">Barre</a></li>
-        <li class="footer-menu__item"><a href="../fuse/" class="footer-menu__link">Fuse</a></li>
-        <li class="footer-menu__item"><a href="../trx/" class="footer-menu__link">TRX</a></li>
-        <li class="footer-menu__item"><a href="../yoga/" class="footer-menu__link">Yoga</a></li>
+        <li class="footer-menu__item"><h4 class="footer-menu__caption">CLASSES</h4></li>
+        <li class="footer-menu__item"><a href="../../classes/barre/" class="footer-menu__link">Barre</a></li>
+        <li class="footer-menu__item"><a href="../../classes/trx/" class="footer-menu__link">TRX</a></li>
+        <li class="footer-menu__item"><a href="../../classes/yoga/" class="footer-menu__link">Yoga</a></li>
       </ul>
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="../../details/contact/" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="../../details/careers/" class="footer-menu__link">Careers</a></li>
-        <li class="footer-menu__item"><a href="../../details/terms/" class="footer-menu__link">Terms and Conditions</a></li>
-        <li class="footer-menu__item"><a href="../../details/privacy" class="footer-menu__link">Privacy Policy</a></li>
+        <li class="footer-menu__item"><a href="../../details/terms/" class="footer-menu__link">Terms &amp; Conditions</a></li>
+        <li class="footer-menu__item"><a href="../../details/privacy/" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">Follow us</h4></li>
         <li class="footer-menu__item footer-menu__item--is-social">
-          <a href="" class="footer-menu__social footer-menu__social--is-instagram "></a>
-          <a href="" class="footer-menu__social footer-menu__social--is-fb"></a>
+          <a href="https://www.instagram.com/mixstudioch/" class="footer-menu__social footer-menu__social--is-instagram "></a>
+          <a href="https://www.facebook.com/MIX-studio-230644687417243/" class="footer-menu__social footer-menu__social--is-fb"></a>
         </li>
       </ul>
       <div class="footer__divider"></div>
       <div class="footer__logo-holder">
         <div class="footer__logo"></div>
-        <p class="footer__copy">&copy; 2017 MIX</p>
+        <p class="footer__copy">&copy; 2017 MIX Studio &ndash; MIX Fitness Sarl</p>
       </div>
-      
     </div>
   </footer>
   
