--- a/en/about/index.html
+++ b/en/about/index.html
@@ -18,7 +18,7 @@
           <li class="menu__item"><a href="../prices/" class="menu__link">Prices</a></li>
           <li class="menu__item"><a href="../team/" class="menu__link">Team</a></li>
           <li class="menu__item"><a href="https://mixstudio.blog/" class="menu__link">blog &ndash; Fuel</a></li>
-          <li class="menu__item"><a href="../fr/about/" class="menu__link">Fr</a></li>
+          <!--<li class="menu__item"><a href="../fr/about/" class="menu__link">Fr</a></li>-->
           <li class="menu__item menu__item--has-no-hover"><a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="menu__button">Login</a></li>
         </ul>
       </div>
@@ -38,7 +38,7 @@
           <p class="squares__text">
             Each discipline offers a full body workout and are all geared to work together bringing fun filled energy, professional level of instruction, high intensity all driven by great music!!
           </p>
-          <a href="#" class="squares__button">book a class now</a>
+          <a href="../prices/" class="squares__button">book a class now</a>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
       <ul class="footer-menu">
         <li class="footer-menu__item"><h4 class="footer-menu__caption">More Info</h4></li>
         <li class="footer-menu__item"><a href="../details/contact/" class="footer-menu__link">Contact us</a></li>
-        <li class="footer-menu__item"><a href="../details/terms/" class="footer-menu__link">Terms and Conditions</a></li>
+        <li class="footer-menu__item"><a href="../details/terms/" class="footer-menu__link">Terms &amp; Conditions</a></li>
         <li class="footer-menu__item"><a href="../details/privacy/" class="footer-menu__link">Privacy Policy</a></li>
       </ul>
       <ul class="footer-menu footer-menu--is-follow">
