--- a/en/prices/index.html
+++ b/en/prices/index.html
@@ -66,7 +66,7 @@
               Valid 1 month after purchase.
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
       <div class="l-container__column l-container__column--is-quarter l-container__column--is-margined">
@@ -90,7 +90,7 @@
               Valid 1 month after purchase.
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
       <div class="l-container__column l-container__column--is-quarter l-container__column--is-margined">
@@ -111,7 +111,7 @@
               Valid 1 month from first class&nbsp;taken. 
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
       <div class="l-container__column l-container__column--is-quarter l-container__column--is-margined">
@@ -132,7 +132,7 @@
               Valid 1 month from first class&nbsp;taken.
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
     </div>
@@ -155,7 +155,7 @@
               Valid 1 month from purchase&nbsp;date
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
       <div class="l-container__column l-container__column--is-quarter l-container__column--is-margined">
@@ -176,7 +176,7 @@
               Valid 3 months after purchase&nbsp;date
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
       <div class="l-container__column l-container__column--is-quarter l-container__column--is-margined">
@@ -197,7 +197,7 @@
               Valid 3 months after purchase date
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
       <div class="l-container__column l-container__column--is-quarter l-container__column--is-margined">
@@ -218,7 +218,7 @@
               Valid 6 months after purchase date
             </p>
           </div>
-          <a href="#" class="price__button">buy now</a>
+          <a href="https://clients.mindbodyonline.com/classic/ws?studioid=693381&stype=-98" class="price__button">buy now</a>
         </div>
       </div>
     </div>
