--- a/en/details/contact/index.html
+++ b/en/details/contact/index.html
@@ -54,7 +54,7 @@
             <strong>+41 21 320 1041</strong>
           </p>
           <p class="article__text">
-            <strong>info@mixstudio.ru</strong>
+            <a href="mailto:info@mix-studio.ch" class="article__link">info@mix-studio.ch</a>
           </p>
         </aside>
       </div>
