--- a/en/details/contact/index.html
+++ b/en/details/contact/index.html
@@ -68,10 +68,10 @@
             A quick message is usually all we need to fix most issues.
           </p>
           <form class="article__form">
-            <input type="text" class="article__input js-name" placeholder="Name">
-            <input type="email" class="article__input js-email" placeholder="Email">
-            <input type="text" class="article__input js-subject" placeholder="Subject">
-            <textarea rows="10" class="article__input article__input--is-textarea js-text" placeholder="Quick message"></textarea>
+            <input type="text" class="article__input js-input" required placeholder="Name">
+            <input type="email" class="article__input js-input" required placeholder="Email">
+            <input type="text" class="article__input js-input" required placeholder="Subject">
+            <textarea rows="10" class="article__input article__input--is-textarea js-input" required placeholder="Quick message"></textarea>
             <input type="button" class="article__submit js-button" value="Send">
             <input type="reset" class="article__reset" value="Cancel">
           </form>
